[tool.poetry]
name = "clonechatgpt"
version = "0.1.0"
description = "CloneChatGPT using flask and Tailwindcss"
authors = ["Menclet <clementlonde23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "2.3.3"
openai = "0.27.10"
python-dotenv = "1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
